--- a/download.html
+++ b/download.html
@@ -212,6 +212,7 @@
       <a href="download.html">Ke stažení</a>
       <a href="contact.html">Kontakt</a>
       <a href="links.html">Odkazy</a>
+      <a href="spoluprace.html">Spolupráce</a>
     </nav>
   </aside>
 
