--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
       <a href="download.html">Ke stažení</a>
       <a href="contact.html">Kontakt</a>
       <a href="links.html">Odkazy</a>
+      <a href="spoluprace.html">Spolupráce</a>
     </nav>
   </aside>
 
