--- a/development.html
+++ b/development.html
@@ -253,6 +253,7 @@
     <div class="version-block">
       <h2>Verze 0.0 – Začátek</h2>
       <p class="version-status">Stav: Vývojová verze (Nelze stáhnout)</p>
+      <p class="version-status">20.04.2025</p>
       <ul>
         <li>Navržen koncept hry</li>
         <li>Spuštěna oficiální webová stránka</li>
